--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "html-starter-kit",
+  "name": "pug-styl-starter-kit",
   "version": "1.0.0",
-  "description": "Frontend starter kit",
+  "description": "Pug/jade + Stylus starter kit",
   "main": "gulpfile.babel.js",
   "scripts": {
     "start": "gulp",
     "build": "cross-env NODE_ENV=development gulp build",
     "production": "cross-env NODE_ENV=production gulp build",
     "clean": "gulp clean",
-    "zip": "gulp archive",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --force"
+    "zip": "gulp archive"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inshou/pug-styl-js-starter-kit.git"
+    "url": "git+https://github.com/inshou/pug-styl-starter-kit.git"
   },
   "keywords": [
     "gulp",
@@ -22,23 +21,26 @@
     "babel"
   ],
   "author": "Chernyshev Pavel <inshou@gmail.com>",
+  "contributors": [
+    "Sergey Levchenko <sergey@levchenko.pw> (https://github.com/nuykon/)"
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/inshou/pug-styl-js-starter-kit/issues"
+    "url": "https://github.com/inshou/pug-styl-starter-kit/issues"
   },
-  "homepage": "https://github.com/inshou/pug-styl-js-starter-kit#readme",
-  "dependencies": {
-  },
+  "homepage": "https://github.com/inshou/pug-styl-starter-kit#readme",
+  "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-register": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.24.1",
+    "browserslist": "^4.3.4",
     "cross-env": "^5.1.4",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-csso": "^3.0.1",
     "gulp-data": "^1.3.1",
     "gulp-if": "^2.0.2",
@@ -48,14 +50,17 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-stylus": "^2.7.0",
-    "gulp-svgmin": "^1.2.4",
-    "gulp-svgstore": "^6.1.1",
     "gulp-zip": "^4.1.0",
     "pug": "^2.0.3",
-    "push-dir": "^0.4.1",
     "stylus": "^0.54.5",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.8.2",
-    "webpack-stream": "^4.0.3"
-  }
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.26.1",
+    "webpack-stream": "^5.1.1"
+  },
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead"
+  ]
 }
