--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp",
     "pug",
     "stylus",
-    "babel"
+    "babel",
+    "webpack"
   ],
   "author": "Chernyshev Pavel <inshou@gmail.com>",
   "contributors": [
